Fix mobile employee form and nav
